# nn_ass2

./: flake.nix  pyproject.toml
src/: Assignment2 copy.ipynb  Assignment2.ipynb  db.sqlite3
